# ssh-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  config_example.env  pyproject.toml  setup.py  ssh_server.py  test_client.py
src/ssh_mcp_server/: __init__.py  __main__.py  server.py
